# gameday

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml
apps/api/: __init__.py  main.py
apps/api/routers/: __init__.py  mirror.py
apps/mirror_agent/: .env.example  bridge.py  requirements.txt
apps/web/: .env.example  index.html  package.json  tsconfig.json
apps/web/src/: App.tsx  index.css  vite-env.d.ts
backend/: .env.example  README.md  requirements.txt
backend/app/: config.py  main.py  models.py  seed.py
backend/app/api/: athletes.py  coach.py  sessions.py
backend/tests/: test_acwr.py  test_coaching.py  test_extraction.py  test_lyzr.py  test_repository.py  test_scoring.py  test_state_machine.py  test_streaks.py  test_ws.py
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  api.ts  checkinReducer.ts  config.ts  index.css  main.tsx  types.ts
functions/: gameday-agent-context.ts
migrations/: 20260717175124_repair-gameday-mirror-schema.sql  20260717182558_add-movement-analyses.sql
scripts/: configure_elevenlabs_agent.py  configure_lyzr_agents.py  configure_lyzr_superflow.py  configure_lyzr_tools.py
spec/: README.md  demo-script.md  lyzr-architecture.md  product-spec.md  technical-spec.md
specs/readyroom/: design.md  requirements.md  tasks.md
src/gameday_mirror/: __init__.py  agui.py  checkin.py  exercises.py  lessons.py  lyzr.py  persistence.py  sponsors.py  superflow.py  vision.py  workouts.py
tests/: test_mirror.py
(+34 files in other folders)
