[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gameday-mirror"
version = "0.1.0"
description = "Camera-first athlete check-ins with LiveKit and ElevenLabs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10.0",
    "elevenlabs>=2.58.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "livekit-agents>=1.6.5",
    "livekit-api>=1.2.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
